cluster/apps/monitoring/thanos/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: thanos
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`thanos.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: thanos-storegateway
          port: 9090
  tls:
    secretName: ${SECRET_CERT}
